...
"Password cannot be shorter than 5 characters." = "Salasana, jossa on vähintään 5 merkkiä.";
"Field cannot be empty." = "Tekstikenttä ei voi olla tyhjä.";
"Not available" = "Ei saatavilla";
"Username already exists." = "Antamasi käyttäjänimi on varattu.";
"Invalid email." = "Virheellinen sähköpostiosoite.";
"The user is not signed in." = "Käyttäjä ei ole kirjautunut sisään.";
"Normal: %d points" = "Normaalitila: %d pistettä";
"Challenge: %d points" = "Haaste-tila: %d pistettä";
"Confirm" = "Vahvistaa";
"Finish" = "Lalmis";
"Error" = "Virhe";
"Cancel" = "Peruuttaa";
"You haven't made a guess." = "Et ole tehnyt arvausta.";
"You got %d points." = "Sinulla on %d pistettä.";
"Your progress will be lost." = "Edistyminen menetetään.";
"You scored %d/5000 points." = " Sinulla on %d/5000 pistettä.";
"Your guess is %d km away from the answer." ="Arvauksesi on %d km vastauksesta.";
"Failed to sign in" = "Sisäänkirjautuminen epäonnistui";
...
