...
                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="default"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Ul-h5-bsw">
                                <rect key="frame" x="269.66666666666669" y="84" width="124.33333333333331" height="30"/>
                                <color key="backgroundColor" red="0.90196078431372551" green="0.22352941176470587" blue="0.27450980392156865" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
                                <state key="normal" title="Sign Out">
                                    <color key="titleColor" red="0.94509803920000002" green="0.98039215690000003" blue="0.93333333330000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="logOut:" destination="zjO-aC-W5P" eventType="touchUpInside" id="TA8-cp-5IT"/>
                                    <segue destination="BVR-Zl-CGz" kind="show" id="TBj-VO-iYO"/>
                                </connections>
...
                                <connections>
                                    <segue destination="2bE-HW-q1v" kind="presentation" modalPresentationStyle="fullScreen" id="ogU-sO-FoM"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="homeView"/>
                        <constraints>
                            <constraint firstItem="4hB-eP-FCr" firstAttribute="top" secondItem="d6O-tX-Fsm" secondAttribute="top" constant="40" id="0ER-5h-lhE"/>
                            <constraint firstItem="agL-G6-PdY" firstAttribute="top" secondItem="7Ul-h5-bsw" secondAttribute="bottom" constant="25" id="8Ya-9U-GkF"/>
                            <constraint firstAttribute="trailing" secondItem="agL-G6-PdY" secondAttribute="trailing" constant="20" id="9b0-sc-2f8"/>
                            <constraint firstItem="d6O-tX-Fsm" firstAttribute="trailing" secondItem="VM6-dA-qZo" secondAttribute="trailing" constant="20" id="AUe-hQ-vlF"/>
                            <constraint firstItem="lVB-ee-9IJ" firstAttribute="width" secondItem="u6h-fP-N6X" secondAttribute="width" multiplier="0.5" id="Aju-eJ-6JI"/>
...
